Toda pagina home esta completa e responsiva

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="topo">
-        <div class="container">
+        <div class="container container-topo">
             <div class="topo-titulo-img-e-nome">
                 <div class="topo-link-img">
                     <a href="index.html">
@@ -40,7 +40,7 @@
             </div>
         </section>
 
-        <section id="sobre">
+        <section id="sobre" class="secao-sobre container">
             <div class="container-conteudo">
                 <h2>Sobre a clínica</h2>
                 <p>Nossa clínica está pronta para receber nossos pacientes através de uma excelente estrutura,
@@ -72,17 +72,17 @@
             </div>
 
             <div class="box-especialidades">
-                <figure class="box-especialidades">
+                <figure class="box-especialidade">
                     <img src="assets/ortopedia1.png" alt="imagem de um ortopedista" title="Imagem de um ortopedista">
                     <figcaption>Ortopedia</figcaption>
                 </figure>
 
-                <figure class="box-especialidades">
+                <figure class="box-especialidade">
                     <img src="assets/pediatra.png" alt="Imagem de uma pediatra" title="Imagem de uma pediatra">
                     <figcaption>Pediatria</figcaption>
                 </figure>
 
-                <figure class="box-especialidades">
+                <figure class="box-especialidade">
                     <img src="assets/geriatra.png" alt="Imagem de uma geriatra" title="Imagem de uma geriatra">
                     <figcaption>Geriatria</figcaption>
                 </figure>
